🚧 Set margin to .global-footer to prevent it from being overlapped by .order-cta

--- a/styles/layouts/_footer.scss
+++ b/styles/layouts/_footer.scss
@@ -1,6 +1,7 @@
 .global-footer {
   padding: 32px 0 40px 0;
   background-color: $background;
+  margin-bottom: $order-cta-height;
 
   &-title {
     @include text-style(13, $dark);
@@ -41,6 +42,8 @@
   }
 
   @include responsive(D) {
+    margin-bottom: 0;
+
     &-title {
       @include text-style(14, $dark);
     }
